syntax = "proto3";

package proto; // proto/v1

//Sets the Go package where structs generated from this .proto will be
//placed. If omitted, the Go package will be derived from the following:
option go_package = "gen/proto";

//unary
message CartItems {
  string ProductID = 1;
  int64 Quantity = 2;
}

message GetCartDetailsRequest {
  string user_id = 1;
}

message GetCartDetailsResponse {
  repeated CartItems cartItems = 1;
}

service CartItemService {
  rpc GetCartDetails(GetCartDetailsRequest) returns (GetCartDetailsResponse);
}
